got nickname input working

--- a/src/player/player.html
+++ b/src/player/player.html
@@ -17,8 +17,9 @@
 </head>
 <body>
   <player-app></player-app>
-  <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
-  <script type="module" src="./src/player-app.js"></script>
+  <script src="../../node_modules/socket.io-client/dist/socket.io.js"></script>
+  <script src="../../node_modules/flyd/flyd.js"></script>
+  <script type="module" src="player-app.js"></script>
 </body>
 
 </html>
