hostconnected and moved socket setup to Game class

--- a/src/host/host.html
+++ b/src/host/host.html
@@ -13,11 +13,12 @@
       background-color: #ededed;
     }
   </style>
-  <title>Draw Clone</title>
+  <title>Draw Clone Host</title>
 </head>
 <body>
   <host-app></host-app>
   <script src="../../node_modules/socket.io-client/dist/socket.io.js"></script>
+  <script src="../../node_modules/flyd/flyd.js"></script>
   <script type="module" src="host-app.js"></script>
 </body>
 
