added wired-elements and meiosis

--- a/src/player/player.html
+++ b/src/player/player.html
@@ -19,6 +19,7 @@
   <player-app></player-app>
   <script src="../../node_modules/socket.io-client/dist/socket.io.js"></script>
   <script src="../../node_modules/flyd/flyd.js"></script>
+  <script src="../../node_modules/meiosis-tracer/dist/meiosis-tracer.js"></script>
   <script type="module" src="player-app.js"></script>
 </body>
 
