--- a/src/host/host.html
+++ b/src/host/host.html
@@ -11,6 +11,9 @@
       padding: 0;
       font-family: 'Gloria Hallelujah', cursive;
     }
+    * {
+      box-sizing: border-box;
+    }
   </style>
   <title>Draw Clone Host</title>
 </head>
