added meiosis tracer

--- a/src/host/host.html
+++ b/src/host/host.html
@@ -20,6 +20,7 @@
 <body>
   <host-app></host-app>
   <script src="../../node_modules/socket.io-client/dist/socket.io.js"></script>
+  <script src="../../node_modules/meiosis-tracer/dist/meiosis-tracer.js"></script>
   <script src="../../node_modules/flyd/flyd.js"></script>
   <script type="module" src="host-app.js"></script>
 </body>
