changed font, color

--- a/src/host/host.html
+++ b/src/host/host.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Put your description here.">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      font-family: 'Gloria Hallelujah', cursive;
+      font-family: 'Permanent Marker', cursive;
+      background-color: #436fc6;
+      color: #ffc857;
     }
     * {
       box-sizing: border-box;
