--- a/src/host/host.html
+++ b/src/host/host.html
@@ -12,7 +12,7 @@
       padding: 0;
       font-family: 'Permanent Marker', cursive;
       background-color: #436fc6;
-      color: #ffc857;
+      color: #ffffff;
     }
     * {
       box-sizing: border-box;
